force-app/main/default/objects/TestObject__c.object
<CustomObject>
    <fields>
        <fullName>AutoNumber__c</fullName>
        <displayFormat>A{YYYY}-{00000}</displayFormat>
        <label>AutoNumber (AutoNumber__c)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox (Checkbox__c)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency (Currency__c)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime (DateTime__c)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date (Date__c)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email (Email__c)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation (Geolocation__c)</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Lookup1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup1 (Lookup1__c)</label>
        <referenceTo>TestObject__c</referenceTo>
        <relationshipLabel>TestObject</relationshipLabel>
        <relationshipName>TestObject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lookup2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup2 (Lookup2__c)</label>
        <referenceTo>TestObject__c</referenceTo>
        <relationshipLabel>TestObject (Lookup2)</relationshipLabel>
        <relationshipName>TestObject1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MultiPicklist__c</fullName>
        <label>MultiPicklist (MultiPicklist__c)</label>
        <picklist>
            <picklistValues>
                <fullName>MValue 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MValue 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MValue 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MValue 4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Null_field_is_null_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Null_field_is_null__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number (Number__c)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent (Percent__c)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone (Phone__c)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist (Picklist__c)</label>
        <picklist>
            <picklistValues>
                <fullName>Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TextArea__c</fullName>
        <label>TextArea (TextArea__c)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text (Text__c)</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL (URL__c)</label>
        <type>Url</type>
    </fields>
    <label>Test Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TOC{0000000000}</displayFormat>
        <label>Test Object Code (Name)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TestObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>